--- a/src/style.css
+++ b/src/style.css
@@ -9,16 +9,21 @@
   grid-template-columns: 1fr 1fr;
   padding: 64px 0px;
   margin: 0px 200px;
+  column-gap: 1rem;
 }
 #titles {
   font-size: 32px;
 }
 .app-form,
-.App {
+.form-side {
   display: flex;
   flex-direction: column;
   gap: 1rem;
 }
 .mb-3 {
   margin-bottom: 0 !important;
+}
+.black-box {
+  height: 100px;
+  background-color: black;
 }
